--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     width: 50vh;
 }
 .container h2{
-    font-size: 2.222rem;
+    font-size: 2.15rem;
     font-weight: bold;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
@@ -86,4 +86,12 @@ form button{
 }
 form button:hover{
     background-color: #b8419c;
+}
+@media screen and (max-width: 540px) {
+    .msg{
+        font-size: 1.15rem;
+    }
+    .container h2{
+        font-size: 1.785rem;
+    }
 }
