--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     border-radius: 1rem;
     min-height: 45vh;
     width: 50vh;
+    margin: 0 5px;
 }
 .container h2{
     font-size: 2.15rem;
